inou/prp/tests/errors/adv_mod_by_zero.prp
/*
:name: adv_mod_by_zero
:type: error
:error: (mod|zero|nil|illegal)
*/
// Modulo by a comptime-known zero must be reported, same as division:
// Dlop::mod_op yields nil and folding it silently is unsound.
const d = 0
const x = 7 % d
cputs("x")
